tests/snapshots/snapshot_tests__snapshot_apply_edits_to_empty_file.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{:?}\", result)"
---
Err("Could not find \"x\" in content. The text may have been modified.")
