tests/snapshots/snapshot_tests__snapshot_apply_hashline_edits_replace_single.snap
---
source: tests/snapshot_tests.rs
expression: output
---
Result:
first
replaced
third


First changed line: Some(2)
