tests/snapshots/snapshot_tests__snapshot_cmd_edit_insert_after.snap
---
source: tests/snapshot_tests.rs
expression: normalize_edit_output(&result)
---
Edit applied successfully.

<diff>
--- <TEMP_FILE>
+++ <TEMP_FILE>
 first
+inserted
 second
-third
+third

</diff>
