tests/snapshots/snapshot_tests__snapshot_cmd_edit_insert_after_last_line.snap
---
source: tests/snapshot_tests.rs
expression: normalize_edit_output(&result)
---
Edit applied successfully.

<diff>
--- <TEMP_FILE>
+++ <TEMP_FILE>
 first
 second
 third
+fourth

</diff>
