tests/snapshots/snapshot_tests__snapshot_cmd_edit_line_beyond_file.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{:?}\", result)"
---
Err("Line 100 does not exist")
