tests/snapshots/snapshot_tests__snapshot_cmd_edit_line_number_zero.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{:?}\", result)"
---
Err("Line 0 does not exist")
