tests/snapshots/snapshot_tests__snapshot_cmd_edit_multiple_operations.snap
---
source: tests/snapshot_tests.rs
expression: normalize_edit_output(&result)
---
Edit applied successfully.

<diff>
--- <TEMP_FILE>
+++ <TEMP_FILE>
 line 1
+new line 1.5
 line 2
 line 3
 line 4
-line 5
+modified line 5

</diff>
