tests/snapshots/snapshot_tests__snapshot_cmd_edit_no_changes.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{:?}\", result)"
---
Err("Could not find \"nonexistent\". Best match (similarity 18%): \"first\"")
